--- a/output.css
+++ b/output.css
@@ -1,5 +1,5 @@
 /*
-! tailwindcss v3.4.4 | MIT License | https://tailwindcss.com
+! tailwindcss v3.4.11 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -582,6 +582,16 @@ video {
   margin: 1.5rem;
 }
 
+.mx-1 {
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+}
+
+.mx-10 {
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
+}
+
 .mx-14 {
   margin-left: 3.5rem;
   margin-right: 3.5rem;
@@ -655,6 +665,10 @@ video {
   margin-right: 4rem;
 }
 
+.mr-6 {
+  margin-right: 1.5rem;
+}
+
 .mt-2 {
   margin-top: 0.5rem;
 }
@@ -699,10 +713,6 @@ video {
   width: 100%;
 }
 
-.w-\[14\%\] {
-  width: 14%;
-}
-
 .w-\[15\%\] {
   width: 15%;
 }
@@ -727,28 +737,8 @@ video {
   width: 350px;
 }
 
-.w-\[40\%\] {
-  width: 40%;
-}
-
-.w-\[46\%\] {
-  width: 46%;
-}
-
 .w-\[50\%\] {
   width: 50%;
-}
-
-.w-\[65\%\] {
-  width: 65%;
-}
-
-.w-\[67\%\] {
-  width: 67%;
-}
-
-.w-\[70\%\] {
-  width: 70%;
 }
 
 .w-\[80\%\] {
@@ -759,8 +749,68 @@ video {
   width: 95%;
 }
 
+.w-\[200px\] {
+  width: 200px;
+}
+
+.w-\[600px\] {
+  width: 600px;
+}
+
+.w-\[\] {
+  width: ;
+}
+
+.w-\[20\] {
+  width: 20;
+}
+
+.w-\[160px\] {
+  width: 160px;
+}
+
+.min-w-\[100\%\] {
+  min-width: 100%;
+}
+
+.min-w-\[120px\] {
+  min-width: 120px;
+}
+
+.min-w-\[280px\] {
+  min-width: 280px;
+}
+
+.min-w-\[380px\] {
+  min-width: 380px;
+}
+
+.min-w-\[400px\] {
+  min-width: 400px;
+}
+
 .max-w-\[100\%\] {
   max-width: 100%;
+}
+
+.max-w-\[1100px\] {
+  max-width: 1100px;
+}
+
+.max-w-\[140px\] {
+  max-width: 140px;
+}
+
+.max-w-\[280px\] {
+  max-width: 280px;
+}
+
+.max-w-\[380px\] {
+  max-width: 380px;
+}
+
+.max-w-\[400px\] {
+  max-width: 400px;
 }
 
 .cursor-pointer {
@@ -854,11 +904,6 @@ video {
 .bg-amber-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(252 211 77 / var(--tw-bg-opacity));
-}
-
-.bg-blue-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(147 197 253 / var(--tw-bg-opacity));
 }
 
 .bg-green-100 {
@@ -1063,6 +1108,10 @@ video {
 
 .p-4 {
   padding: 1rem;
+}
+
+.p-5 {
+  padding: 1.25rem;
 }
 
 .p-8 {
@@ -1301,4 +1350,63 @@ video {
 .hover\:brightness-90:hover {
   --tw-brightness: brightness(.9);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+@media (max-width: 980px) {
+  .max-\[980px\]\:invisible {
+    visibility: hidden;
+  }
+
+  .max-\[980px\]\:collapse {
+    visibility: collapse;
+  }
+
+  .max-\[980px\]\:hidden {
+    display: none;
+  }
+}
+
+@media (min-width: 640px) {
+  .sm\:invisible {
+    visibility: hidden;
+  }
+
+  .sm\:w-\[160px\] {
+    width: 160px;
+  }
+}
+
+@media (min-width: 768px) {
+  .md\:invisible {
+    visibility: hidden;
+  }
+
+  .md\:w-\[160px\] {
+    width: 160px;
+  }
+
+  .md\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .md\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
+  }
+}
+
+@media (min-width: 800px) {
+  .min-\[800px\]\:w-\[80\%\] {
+    width: 80%;
+  }
+
+  .min-\[800px\]\:p-14 {
+    padding: 3.5rem;
+  }
+
+  .min-\[800px\]\:px-52 {
+    padding-left: 13rem;
+    padding-right: 13rem;
+  }
 }
