--- a/output.css
+++ b/output.css
@@ -582,6 +582,10 @@ video {
   margin: 1.5rem;
 }
 
+.m-1 {
+  margin: 0.25rem;
+}
+
 .mx-1 {
   margin-left: 0.25rem;
   margin-right: 0.25rem;
@@ -721,6 +725,10 @@ video {
   width: 20%;
 }
 
+.w-\[200px\] {
+  width: 200px;
+}
+
 .w-\[25\%\] {
   width: 25%;
 }
@@ -749,24 +757,8 @@ video {
   width: 95%;
 }
 
-.w-\[200px\] {
-  width: 200px;
-}
-
-.w-\[600px\] {
-  width: 600px;
-}
-
-.w-\[\] {
-  width: ;
-}
-
-.w-\[20\] {
-  width: 20;
-}
-
-.w-\[160px\] {
-  width: 160px;
+.w-auto {
+  width: auto;
 }
 
 .min-w-\[100\%\] {
@@ -787,6 +779,10 @@ video {
 
 .min-w-\[400px\] {
   min-width: 400px;
+}
+
+.min-w-\[220px\] {
+  min-width: 220px;
 }
 
 .max-w-\[100\%\] {
@@ -1202,11 +1198,6 @@ video {
   line-height: 2.25rem;
 }
 
-.text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
-}
-
 .text-\[50px\] {
   font-size: 50px;
 }
@@ -1352,39 +1343,61 @@ video {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
+@media (max-width: 1000px) {
+  .max-\[1000px\]\:hidden {
+    display: none;
+  }
+}
+
 @media (max-width: 980px) {
-  .max-\[980px\]\:invisible {
-    visibility: hidden;
-  }
-
-  .max-\[980px\]\:collapse {
-    visibility: collapse;
-  }
-
   .max-\[980px\]\:hidden {
     display: none;
   }
 }
 
-@media (min-width: 640px) {
-  .sm\:invisible {
-    visibility: hidden;
+@media (max-width: 640px) {
+  .max-\[640px\]\:mx-2 {
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
   }
 
-  .sm\:w-\[160px\] {
-    width: 160px;
+  .max-\[640px\]\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+}
+
+@media (max-width: 600px) {
+  .max-\[600px\]\:mx-2 {
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+  }
+
+  .max-\[600px\]\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
+  .max-\[600px\]\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .max-\[600px\]\:w-\[100\%\] {
+    width: 100%;
+  }
+
+  .max-\[600px\]\:w-\[95\%\] {
+    width: 95%;
+  }
+
+  .max-\[600px\]\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
 }
 
 @media (min-width: 768px) {
-  .md\:invisible {
-    visibility: hidden;
-  }
-
-  .md\:w-\[160px\] {
-    width: 160px;
-  }
-
   .md\:px-0 {
     padding-left: 0px;
     padding-right: 0px;
@@ -1408,5 +1421,11 @@ video {
   .min-\[800px\]\:px-52 {
     padding-left: 13rem;
     padding-right: 13rem;
+  }
+}
+
+@media (min-width: 1000px) {
+  .min-\[1000px\]\:hidden {
+    display: none;
   }
 }
